[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-forbidden-api"
version = "0.1.0"
description = "Fetch, locally store, and serve Discord channel messages over a small Flask API, with support for sending messages and replies."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "flask>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests>=2.31",
]

[project.scripts]
discord-sync = "main:main"

[tool.setuptools]
py-modules = ["main", "app", "config", "discord_messages", "discord_send_messages"]

[tool.ruff]
line-length = 100
target-version = "py39"
